@@ -38,15 +38,14 @@ namespace WTF {
 // Manage reference count manually so UnderlyingString does not need to be defined in the header.
 
 struct StringView::UnderlyingString {
-    std::atomic_uint refCount;
+    std::atomic_uint refCount { 1u };
     bool isValid { true };
     const StringImpl& string;
     explicit UnderlyingString(const StringImpl&);
 };
 
 StringView::UnderlyingString::UnderlyingString(const StringImpl& string)
-    : refCount(1)
-    , string(string)
+    : string(string)
 {
 }
 
